tests/unit/language/overloads/group_name_collision_errors.arche
// RUN: not %arche -o %t %s

func a(x: int) -> int {
  return x;
}
func b(x: float) -> float {
  return x;
}
func a = { a, b };  // error: name 'a' is already declared
